@@ -59,6 +59,6 @@ public class Score implements Comparable<Score>{
      * and a value greater than 0 if the score achieved is greater than that of the score achieved by the player in the specified score.
      */
     public int compareTo(Score score){
-        return new Integer(getScore()).compareTo(score.getScore());
+        return Integer.valueOf(getScore()).compareTo(Integer.valueOf(score.getScore()));
     }
 }
